# yolov5s-ncnn

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  yolov5s.cpp  yolov5s.h
docs/: yolov5s实践记录.md
model/: best.param
